# cpu-scheduler-project

./: CMakeLists.txt  Process.h  README.md  SJF_NonPremetive.cpp  SJF_Premetive.cpp  Scheduler.cpp  Scheduler.h  main.cpp  main_gui.cpp
resources/: app.rc
scripts/: build.ps1  run-console.ps1  run-gui.ps1
src/: Process.h  Scheduler.cpp  Scheduler.h
src/algorithms/: FCFS.cpp  Priority_NonPremetive.cpp  Priority_Premetive.cpp  RR.cpp  SJF_NonPremetive.cpp  SJF_Premetive.cpp
